@@ -12,7 +12,8 @@
 : Added the ability to update several bugs at once
 : Allow admins and project admins to delete bugs
 : Allow admins and project admins to change reporter
-: Adding two new permissions (AddBug, CloseBug) and one new group (Manager)
+: Added two new permissions (AddBug, CloseBug) and one new group (Manager)
+: Added support to mark bugs as duplicates of each other
 
 -- 1.0 -- 3 Aug 2005
 : Added links from project summary on home page (Phil Davis).
